tests/ui/demux/rest_pattern_fails.stderr
error: expected identifier
 --> $DIR/rest_pattern_fails.rs:4:24
  |
4 |     demux!(MyEnum { A, .., B, C });
  |                        ^^

error: expected identifier
 --> $DIR/rest_pattern_fails.rs:5:30
  |
5 |     demux!(MyEnum { A, B, C, .. });
  |                              ^^

error: expected identifier
 --> $DIR/rest_pattern_fails.rs:6:21
  |
6 |     demux!(MyEnum { .., A, B, C });
  |                     ^^

error: expected identifier
 --> $DIR/rest_pattern_fails.rs:8:30
  |
8 |     demux!(MyEnum { A, B, C, .. });
  |                              ^^

error: expected `,`
 --> $DIR/rest_pattern_fails.rs:9:30
  |
9 |     demux!(MyEnum { A, B, C  .. });
  |                              ^^

error: expected identifier
  --> $DIR/rest_pattern_fails.rs:11:21
   |
11 |     demux!(MyEnum { .., A, B, C, .. });
   |                     ^^

error: expected identifier
  --> $DIR/rest_pattern_fails.rs:12:21
   |
12 |     demux!(MyEnum { ..  A, B, C, .. });
   |                     ^^

error: expected identifier
  --> $DIR/rest_pattern_fails.rs:14:24
   |
14 |     demux!(MyEnum { A, ..  B, C, .. });
   |                        ^^

error: expected identifier
  --> $DIR/rest_pattern_fails.rs:15:24
   |
15 |     demux!(MyEnum { A, .., B, C, .. });
   |                        ^^

error: expected identifier
  --> $DIR/rest_pattern_fails.rs:17:21
   |
17 |     demux!(MyEnum { .. A, B, C });
   |                     ^^

error: expected curly braces
  --> $DIR/rest_pattern_fails.rs:18:19
   |
18 |     demux!(MyEnum .. { A, B, C });
   |                   ^^

error: expected identifier
  --> $DIR/rest_pattern_fails.rs:19:12
   |
19 |     demux!(.. MyEnum { A, B, C });
   |            ^^
